Rename option distributedKillIM into distributed-kill-IM

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1681,7 +1681,7 @@ If needed, more information can be obtained by contacting the \imitator{} team.
 % check-point
 % completeIM
 % -counterexample
-% distributedKillIM
+% -distributed-kill-IM
 % precomputepi0
 
 
