Introduce flows into the grammar and parsing structure

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2488,6 +2488,8 @@ We define each of those two components below.
 	$|$ & \emptystring                                    \\
 \end{tabular}
 
+% TODO: flow!
+
 
 %------------------------------------------------------------
 \regleGrammaire{transitions}
@@ -3253,6 +3255,7 @@ The following words are reserved keywords and cannot be used as names for automa
 \styleIMI{eventually},
 \styleIMI{everytime},
 \styleIMI{False},
+\styleIMI{flow},
 \styleIMI{goto},
 \styleIMI{happened},
 \styleIMI{has},
