--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -135,6 +135,26 @@
 }
 
 
+@article{ACHHHNOSY95,
+  author    = {Rajeev Alur and
+               Costas Courcoubetis and
+               Nicolas Halbwachs and
+               Thomas A. Henzinger and
+               Pei-Hsin Ho and
+               Xavier Nicollin and
+               Alfredo Olivero and
+               Joseph Sifakis and
+               Sergio Yovine},
+	title     = {The Algorithmic Analysis of Hybrid Systems},
+	journal   ={\TCS{}},
+	volume    = {138},
+	number    = {1},
+	year      = {1995},
+	pages     = {3-34},
+	doi       = {10.1016/0304-3975(94)00202-T},
+	bibsource = {DBLP, http://dblp.uni-trier.de},
+}
+
 @inproceedings{ACN15,
 	author = {Andr{\'e}, {\'E}tienne and Coti, Camille and Nguyen, Hoang Gia},
 	title = {Enhanced Distributed Behavioral Cartography of Parametric Timed Automata},
