--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -160,6 +160,7 @@
 \newcommand{\DVarCard}{J} % cardinality of discrete variables
 % \newcommand{\DVarinit}{\DVar_\init} % discrete variable
 \newcommand{\edge}{e}
+\newcommand{\flow}{\ensuremath{\mathit{flow}}}
 \newcommand{\guard}{g}
 \newcommand{\invariant}{I}
 \newcommand{\LConstraint}{\mathcal{LC}} % (#1)% set of all constraints over some set
@@ -179,7 +180,7 @@
 \newcommand{\pval}{v} % parameter valuation
 % \newcommand{\resets}{R}
 \newcommand{\steps}{ {\rightarrow} }
-\newcommand{\stopwatches}{\mathit{SW}}
+% \newcommand{\stopwatches}{\mathit{SW}}
 \newcommand{\tuple}[1]{\langle#1\rangle}
 \newcommand{\unobs}{\ensuremath{\epsilon}}
 \newcommand{\Var}{\mathit{Var}} % set of variables
