--- a/doc/graphics-credits.tex
+++ b/doc/graphics-credits.tex
@@ -36,6 +36,9 @@
 	version 2.12 & \includegraphics[width=.15\textwidth]{logo2-12-300.png} & \href{https://publicdomainpictures.net/en/view-image.php?image=39798&picture=lobster}{Photo of a live lobster} & Junior Libby & \cczero{}
 	%------------------------------------------------------------
 	\\\hline
+	version 3 & \includegraphics[width=.15\textwidth]{logo-3-300.png} & \href{https://commons.wikimedia.org/wiki/File:Banon2.jpg}{French goat's cheese Banon cut to show the inside of the cheese} & Tangopaso & \publicdomain{}
+	%------------------------------------------------------------
+	\\\hline
 \end{tabular}
 
 % NOTE: logos can be downloaded at https://creativecommons.org/about/downloads/
